# dppx

./: DOCUMENTATION.md  LICENSE  README.md  go.mod  go.sum
benchmark/: mongo.go  mongoResult.txt  qdrantResult.txt  qdrantTest.go  result.txt  test.go
connectors/mongodb/: client.go  config.go  mapper.go  retriever.go
connectors/qdrant/: client.go  config.go  filters.go  mapper.go  options.go  retriever.go
core/engine/: config.go  engine.go  search.go  select.go
core/fusion/: weighted.go
core/pipeline/: pipeline.go  run.go
core/pool/: pool.go
core/rerank/: interface.go
core/retriever/: interface.go  memory.go
core/retriever/memory/: memory.go
core/sampling/: fair.go  interface.go  mmr.go  random.go  topk.go
core/scoring/: boost.go  composite.go  conditianal.go  field.go  freshness.go  interface.go  norm.go  normalize.go  personalization.go  popularity.go  random.go  threshold.go
core/similarity/: cosine.go  dot.go  euclidean.go  interface.go  manhattan.go  norm.go
core/topk/: heap.go
storage/native/cpp/: CMakeLists.txt  build.sh
storage/native/cpp/include/: bridge.h  distance.hpp  doc.hpp  heap.hpp  hnsw.hpp  index.hpp  payload.hpp  segment.hpp  storage.hpp  vector.hpp  wal.hpp
storage/native/cpp/src/: bridge.cpp  distance.cpp  hnsw.cpp  index.cpp  payload.cpp  segment.cpp  storage.cpp  wal.cpp
storage/native/go/: bridge.go  config.go  delete.go  index.go  insert.go  operations.go  search.go  types.go
tests/: mongo.go  qdrant.go  storage.go  test.go
types/: item.go  query.go  scoredItem.go  searchResult.go  vector.go
